<resources>
    <string name="app_name">VuIR HDX</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="search">Search</string>
    <string name="run">Run</string>
    <string name="camera_name_primary">Primary Camera Name</string>
    <string name="camera_name_secondary">Secondary Camera Name</string>
    <string name="camera_side_primary">Primary Camera Side</string>
    <string name="camera_side_secondary">Secondary Camera Side</string>
    <string name="focus_point">Focus Point</string>
    <string name="metering_point">Metering Point</string>
    <string name="gimbal_control">Gimbal Control</string>
    <string name="display_grid">Display Grid</string>
    <string name="txt_grid_overlay_selection">Change Grid Overlay Type: </string>
    <string name="txt_center_point_selection">Change Center Point Type: </string>
    <string name="txt_video_feed_selection">Change Video Source: </string>
    <string name="txt_video_dynamic_size">Test FPV widget view in different size: </string>
    <string name="grid_type_none">None</string>
    <string name="grid_type_parallel">Parallel</string>
    <string name="grid_type_parallel_diagonal">Parallel with Diagonals</string>
    <string name="set_auto_video_feed">Auto</string>
    <string name="set_primary_video_feed">Primary</string>
    <string name="set_secondary_video_feed">Secondary</string>
    <string name="set_fpv_size">Resize</string>
    <string name="sdk_version">Version: %1$s</string>
    <string name="wsbridge_ip">WSBridge IP</string>
    <string name="provider_google_maps">Google Maps</string>
    <string name="provider_here_maps">Here Maps</string>
    <string name="provider_amaps">AMaps</string>
    <string name="provider_mapbox">Mapbox</string>
    <string name="error_map_not_initialized">The map has not been initialized yet</string>
    <string name="home_direction">Home Direction</string>
    <string name="auto_frame">Auto Frame</string>
    <string name="unlock_flyzones">Unlock Fly Zones</string>
    <string name="show_flight_path">Show Flight Path</string>
    <string name="show_home_point">Show Home Point</string>
    <string name="show_gimbal_yaw">Show Gimbal Yaw</string>
    <string name="clear_flight_path">Clear Flight Path</string>
    <string name="replace_icon">Replace Icon</string>
    <string name="fly_zone">Fly Zone</string>
    <string name="fly_zone_legend">Fly Zone Legend</string>
    <string name="dji_account_indicator">DJI Account Login Indicator</string>
    <string name="new_color">New Color</string>
    <string name="sync">Sync</string>
    <string-array name="iconArray">
        <item>Aircraft</item>
        <item>Home</item>
        <item>Gimbal Yaw</item>
        <item>Locked Zone</item>
        <item>Unlocked Zone</item>
    </string-array>
    <string-array name="mapTypeArray">
        <item>Standard</item>
        <item>Satellite</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="lineTypeArray">
        <item>Home Direction</item>
        <item>Flight Path</item>
        <item>Fly Zone Border</item>
    </string-array>
    <string name="thermal">Thermal</string>
    <string name="action_settings">Settings</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="connection_only_rc">Status: Only RC Connected</string>
    <string name="model_not_available">Firmware version:N/A</string>
    <string name="product_information">Product Information</string>
    <string name="sdk_registration_message">SDK Registration Failed. Please check the bundle ID and your network
        connectivity
    </string>
    <string name="sdk_registration_success_message">SDK Registered Successfully</string>
    <string name="sdk_registration_doing_message">Registering, pls wait...</string>
    <string name="activity_component_list">Component List</string>
    <string name="start_payload">Start Payload</string>
    <string name="start_payload_send_data">Send Data Activity</string>
    <string name="start_payload_fail">Can not find the payload activity!</string>
    <string name="success">Success</string>
    <string name="login">Login</string>
    <string name="component_listview_component">Component</string>
    <string name="component_listview_camera">Camera</string>
    <string name="component_listview_gimbal">Gimbal</string>
    <string name="component_listview_flight_controller">Flight Controller</string>
    <string name="component_listview_battery">Battery</string>
    <string name="component_listview_airlink">Air Link</string>
    <string name="component_listview_remote_controller">Remote Controller</string>
    <string name="component_listview_mobile_remote_controller">Mobile Remote Controller</string>
    <string name="component_listview_mission_manager">Mission Manager (Deprecated)</string>
    <string name="component_listview_timeline_mission_control">Timeline Mission Control</string>
    <string name="component_listview_bluetooth">Bluetooth</string>
    <string name="component_listview_access_locker">Access Locker</string>
    <string name="component_listview_accessory_aggregation">Accessory Aggregation</string>
    <string name="component_listview_audio_file_list_manager">Audio File List Manager</string>
    <string name="component_listview_live_stream">Live Stream</string>
    <string name="component_listview_sdk_4_0">4.0 New Interfaces</string>
    <string name="component_listview_waypoint_mission_operator">New Waypoint Mission Operator</string>
    <string name="component_listview_keyed_interface">Keyed Interface Sample</string>
    <string name="component_listview_sdk_4_1">4.1 New Interfaces</string>
    <string name="component_listview_app_activation">App Activation and ADSB View</string>
    <string name="component_listview_sdk_4_5">4.5 New Interfaces</string>
    <string name="component_listview_sdk_4_6">4.6 New Interfaces</string>
    <string name="component_listview_sdk_4_8">4.8 New Interfaces</string>
    <string name="component_listview_sdk_4_9">4.9 New Interfaces</string>
    <string name="component_listview_flight_hub">Flight Hub</string>
    <string name="component_listview_payload">Payload</string>
    <string name="component_listview_redirect_to_djigo">Redirect to DJI Go</string>
    <string name="component_listview_redirect_go4">DJI Go 4</string>
    <string name="component_listview_redirect_go4_failure">Cannot redirect to DJI Go 4, Please check if DJI Go 4 has installed</string>
    <string name="component_listview_redirect_go">DJI Go</string>
    <string name="component_listview_redirect_go_failure">Cannot redirect to DJI Go, Please check if DJI Go has installed</string>
    <string name="component_listview_key_manager">KeyManager</string>
    <string name="key_manager_listview_key_Interface">Key Manager View</string>
    <string name="key_manager_component_spinner_title">Component</string>
    <string name="key_manager_sub_component_spinner_title">Sub Component</string>
    <string name="key_manager_key_interface_title">Key Interface</string>
    <string name="key_manager_component_index_title">Component Index</string>
    <string name="key_manager_get_value_desc">Get Value</string>
    <string name="key_manager_set_value_desc">Set Value</string>
    <string name="key_manager_listen_key_desc">Listen Key</string>
    <string name="camera_subtitle_general">General</string>
    <string name="camera_listview_push_info">Push Info</string>
    <string name="camera_listview_iso">Set/Get ISO</string>
    <string name="camera_subtitle_shoot_photo">Shoot Photo</string>
    <string name="camera_listview_shoot_single_photo">Shoot Single Photo</string>
    <string name="camera_listview_shoot_interval_photo">Shoot Interval Photo</string>
    <string name="camera_subtitle_record_video">Record Video</string>
    <string name="camera_listview_record_video">Record Video</string>
    <string name="camera_subtitle_playback">Playback</string>
    <string name="camera_listview_playback_push_info">Playback Push Info</string>
    <string name="camera_listview_playback_push_info_description">Playback State Information</string>
    <string name="camera_listview_playback_command">Playback Commands</string>
    <string name="camera_listview_playback_download">Playback Download</string>
    <string name="camera_subtitle_media_download">Media Download</string>
    <string name="camera_listview_download_media">Download Media</string>
    <string name="camera_listview_media_playback">Media Playback</string>
    <string name="moveToPosition">Skip Time</string>
    <string name="gimbal_subtitle_rotate_gimbal">Rotate Gimbal</string>
    <string name="gimbal_listview_push_info">Push Info</string>
    <string name="gimbal_listview_rotate_gimbal">Rotate With Speed</string>
    <string name="gimbal_listview_gimbal_capability">Gimbal Capability</string>
    <string name="battery_subtitle">Battery Information</string>
    <string name="battery_listview_push_info">Push Info</string>
    <string name="battery_listview_set_get_discharge_day">Set/Get Discharge Day</string>
    <string name="remote_controller_subtitle">Remote Controller Information</string>
    <string name="remote_controller_listview_push_info">Push Info</string>
    <string name="flight_controller_subtitle_general">General</string>
    <string name="flight_controller_listview_compass_calibration">Compass Calibration</string>
    <string name="flight_controller_listview_flight_limitation">Flight Limitation</string>
    <string name="flight_controller_subtitle_orientation_mode">Orientation Mode</string>
    <string name="flight_controller_listview_orientation_mode">Orientation Mode</string>
    <string name="flight_controller_subtitle_virtual_stick">Virtual Stick</string>
    <string name="flight_controller_listview_virtual_stick">Virtual Stick</string>
    <string name="flight_controller_subtitle_intelligent_flight_assistant">Intelligent Flight Assistant</string>
    <string name="flight_controller_listview_intelligent_flight_assistant">Intelligent Flight Assistant</string>
    <string name="airlink_subtitle_wifi_airlink">WiFi Airlink</string>
    <string name="airlink_listview_wifi_set_get_ssid">Set/Get WiFi SSID</string>
    <string name="airlink_listview_wifi_reboot_wifi">Reboot WiFi</string>
    <string name="airlink_subtitle_lb_airlink">Light Bridge Airlink</string>
    <string name="airlink_listview_lb_set_get_channel">Set/Get LBAirlink Channel</string>
    <string name="shoot_single_photo">Shoot Single Photo</string>
    <string name="shoot_single_photo_descritpion">Shoot Single Photo</string>
    <string name="record_video_start_record">Start Record</string>
    <string name="record_video_stop_record">Stop Record</string>
    <string name="record_video_initial_time">00:00:00</string>
    <string name="fetch_media_view_description">Fetch Media</string>
    <string name="fetch_media_view_fetch_thumbnail">Fetch Thumbnail</string>
    <string name="fetch_media_view_fetch_preview">Fetch Preview</string>
    <string name="fetch_media_view_fetch_media">FetchMedia</string>
    <string name="not_support_mediadownload">This product does not support media download function.</string>
    <string name="support_mediadownload">This product supports media download function.</string>
    <string name="playback_download_description">In this mode, you could download the media file using the playback
        mode. The pre-condition is that camera is in the multiple edit mode.
    </string>
    <string name="playback_download_select_0">1st Photo</string>
    <string name="playback_download_select_1">2nd Photo</string>
    <string name="ir_media_gallery">IR Media Gallery</string>
    <string name="title_home">Home</string>
    <string name="title_web">sUAS.com</string>
    <string name="title_about">About the App</string>
    <string name="go_fly">Go Fly</string>
</resources>