<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_vuir"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/go_fly" />

    <item
        android:id="@+id/navigation_web"
        android:icon="@mipmap/ic_action_suas_com_big"
        android:title="@string/title_web" />
    <!--item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" /-->
    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_camera_roll_black_24dp"
        android:title="@string/ir_media_gallery" />
    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_help_blue_24dp"
        android:title="@string/title_about" />

</menu>
